# acm-christmas

./: Makefile  README.md  camerarc  go.mod  go.sum  go.work  shell.nix
cmd/: ffmpeg-bulk.sh  live-capture  live-capture.sh  move-to-pi  prep-pi
cmd/big-spot/: README  flags.go  main.go
cmd/esp32-cycle/: go.mod
cmd/extract-frames/: README  main.go  time.go
cmd/ffutil/: main.go
cmd/generate-patterns/: main.go
cmd/live-capture/: main.go
cmd/random-tree/: description.txt  main.go
cmd/rpi-csv-colors/: main.go
cmd/rpi-scanup/: main.go
cmd/rpi-worm/: main.go
cmd/tree-canvas/: main.go
data/: board-schematic.fz
data/acmtree/: README.md  led-points.csv
data/fake/: README.md  led-points.csv
esp32/: go.mod
internal/animation/: animation.go  animation_test.go
internal/concqueue/: concqueue.go  concqueue_test.go  safelist.go
internal/csvutil/: csvutil.go  csvutil_test.go
internal/intmath/: intmath.go  intmath_test.go
internal/quoted/: split.go
internal/xcolor/: average.go  rgb.go
internal/xdraw/: circle.go  point.go  subimage.go
lib/canvas/: canvas.go
lib/christmas/: christmas.proto
lib/christmas/py/: .gitignore  README.md  genpb.sh  pyproject.toml  shell.nix
lib/christmas/py/acm_christmas/: __init__.py
lib/christmas/py/examples/: test.py
lib/christmasd/: christmasd.go  christmasd_test.go  websocket.go
lib/ffutil/: ffutil.go  threshold.go
lib/leddraw/: intensity.go  ledcanvas.go  ledcanvasanimated.go  ledstrip.go
lib/livecapture/: camera.go
lib/vision/: bigspot.go  (+3 more)
nix/: sources.json  tinygo.nix
proto/: ledd.proto
(+13 files in other folders)
