[tool.poetry]
name = "acm_christmas"
version = "0.1.0"
description = "Library for interacting with the ACM Christmas Tree"
authors = ["Diamond Dinh <diamond@libdb.so>", "Amy Parker <amy@amyip.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
protobuf = "^4.25.1"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
